--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.0.24",
     "next": "14.1.4",
     "react": "^18",
+    "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18"
   },
   "devDependencies": {
