--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "@nextui-org/react": "^2.2.10",
     "framer-motion": "^11.0.24",
     "next": "14.1.4",
     "react": "^18",
-    "react-credit-cards-2": "^1.0.2",
-    "react-dom": "^18"
+    "react-creditcard": "^1.1.2",
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
+    "react-payment-inputs": "^1.1.9"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -23,6 +29,6 @@
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.4.3"
   }
 }
