--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@nextui-org/react": "^2.2.10",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.24",
     "next": "14.1.4",
     "react": "^18",
