--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.14",
     "@nextui-org/react": "^2.2.10",
     "axios": "^1.6.8",
+    "eslint-config-next": "^14.1.4",
     "framer-motion": "^11.0.24",
     "next": "14.1.4",
     "react": "^18",
