--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
@@ -16,6 +17,7 @@
     "@nextui-org/react": "^2.2.10",
     "axios": "^1.6.8",
     "eslint-config-next": "^14.1.4",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.24",
     "next": "14.1.4",
     "react": "^18",
