--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@auth0/nextjs-auth0": "^3.5.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -16,10 +17,11 @@
     "@mui/material": "^5.15.14",
     "@nextui-org/react": "^2.2.10",
     "axios": "^1.6.8",
-    "eslint-config-next": "^14.1.4",
     "dotenv": "^16.4.5",
+    "eslint-config-next": "^14.1.4",
     "framer-motion": "^11.0.24",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-creditcard": "^1.1.2",
     "react-dom": "^18",
