--- a/client/package.json
+++ b/client/package.json
@@ -15,16 +15,21 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@nextui-org/react": "^2.2.10",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.6.8",
-    "eslint-config-next": "^14.1.4",
     "dotenv": "^16.4.5",
+    "eslint-config-next": "^14.1.4",
     "framer-motion": "^11.0.24",
     "next": "14.1.4",
     "react": "^18",
     "react-creditcard": "^1.1.2",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
-    "react-payment-inputs": "^1.1.9"
+    "react-payment-inputs": "^1.1.9",
+    "recharts": "^2.12.3"
   },
   "devDependencies": {
     "@types/node": "^20",
